[project]
name = "nuance"
version = "0.8.1"
description = "Transit signals detection among correlated noises"
authors = [{ name = "Lionel Garcia" }]
license = "MIT"
readme = "README.md"
keywords = ["jax", "astronomy", "exoplanets", "transit"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.25",
    "tinygp",
    "jaxlib",
    "jaxopt",
    "numpy",
    "matplotlib",
    "scipy",
    "multiprocess",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "astropy"]

docs = [
    "sphinx",
    "docutils",
    "jupyterlab",
    "myst-parser",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx-design",
    "toml",
    "ipywidgets",
    "wotan",
    "astropy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
